# CoScientist

./: .gitignore  LICENSE  README.md  chem_main_cli.py  definitions.py  example_config.env  med_main_cli.py  pyproject.toml  tools_checklist.md
ChemCoScientist/: logger.py  main_cli.py  streamlit_app.py
ChemCoScientist/agents/: agents.py  agents_prompts.py
ChemCoScientist/chemical_utils/: chemical_functions.py  ocr_pipeline.py  openchemie_functions.py
ChemCoScientist/conf/: create_conf.py
ChemCoScientist/dataset_handler/chembl/: chembl_utils.py
ChemCoScientist/download_papers/: functions.py
ChemCoScientist/frontend/: chat.py  dataset_management.py  init_session.py  memory.py  paper_management.py  side_bar.py  streamlit_endpoints.py  utils.py
ChemCoScientist/memory/: json_db.py  memory_manager.py
ChemCoScientist/paper_analysis/: chroma_db_operations.py  constants.py  dataset_collection.py  marker_parsing.sh  prompts.py  question_processing.py  settings.py
ChemCoScientist/tools/: __init__.py  chem_ocr_tools.py  chemist_tools.py  ml_tools.py  nano_tools.py  paper_analysis_tools.py  utils.py
ChemCoScientist/tools/models/: generative_inference.py
CoScientist/: __init__.py  config.py
CoScientist/chemical_utils/: ocr_pipeline.py  retrosynthesis.py
CoScientist/paper_parser/: parse_and_split.py  parser_prompts.py  s3_connection.py  utils.py
CoScientist/scientific_agents/: agents.py
CoScientist/src/: example.env
CoScientist/src/coscientist/: agents.py  instructions.py
CoScientist/src/fedotmas/: __init__.py  _serving.py  _settings.py
FedotCoSc/: requirements.txt
FedotCoSc/src/: main.py  utils.py
FedotCoSc/src/coscientist/: agents.py
MedCoScientist/: main_cli.py
MedCoScientist/agents/: agents.py  agents_prompts.py  tools_prompts.py
MedCoScientist/conf/: create_conf.py
MedCoScientist/tools/: __init__.py  keywords_tools.py  pico_tools.py  pubmed_tools.py
docker/: Dockerfile  docker-compose.yml
infrastructure/automl/: api_utils.py  automl_api.py
infrastructure/automl/utils/: automl_main.py
infrastructure/chroma/: docker-compose.yml
infrastructure/chroma/embedding_service/: app.py
infrastructure/chroma/reranker_service/: app.py
infrastructure/chroma/scripts/: test_services.py
infrastructure/generative_models/: Dockerfile  api_utils.py
mcp-servers/: docker-compose.yml
mcp-servers/chemical-mcp-server/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mcp-servers/chemical-mcp-server/server/: __init__.py  chemical_functions.py  chemical_server.py  ocr_pipeline.py
mcp-servers/dataset-collection-mcp-server/: .env.example  Dockerfile  README.md  dataset_collection_server.py  prompt.py  pyproject.toml
mcp-servers/papers-search-mcp-server/: .env.example  Dockerfile  README.md  openalex_client.py  papers_search_server.py  pyproject.toml
metrics/: compute_metrics.py
osa_docs/: index.md
osa_docs/ChemCoScientist/: index.md
osa_docs/ChemCoScientist/agents/: agents.md  index.md
osa_docs/ChemCoScientist/conf/: index.md
osa_docs/ChemCoScientist/data_store/: index.md
osa_docs/ChemCoScientist/dataset_handler/: index.md
osa_docs/CoScientist/: index.md
osa_docs/infrastructure/: index.md
osa_docs/metrics/: compute_metrics.md  index.md
osa_docs/scripts/: index.md
osa_docs/scripts/playground/: index.md  (+2 more)
scripts/playground/: ds_builder_agent_example.py  ml_agent_example.py
tests/integration/: conftest.py  test_paper_analysis.py
(+105 files in other folders)
