[project]
name = "chemical-mcp-server"
version = "0.1.0"
description = "Standalone MCP server for chemistry tools (SMILES, docking, OCR, visualization)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.5",
    "requests>=2.28",
    "python-dotenv>=1.0",
    "pubchempy>=1.0",
    "py3Dmol>=2.0",
    "rdkit>=2024.3",
    "aiohttp>=3.9",
    "pandas>=2.0",
    "pymupdf>=1.23",
    "Pillow>=10.0",
]

[project.scripts]
chemical-mcp-server = "server.chemical_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
