[project]
name = "papers-search-mcp-server"
version = "0.1.0"
description = ""
authors = [
    {name = "asya orlova",email = "asya-1610@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastmcp (>=3.1.0,<4.0.0)",
    "boto3 (>=1.42.67,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
